--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ li{
 }
 
 .footer{
-    background-color: #D1C4E9;
+    background-color: #d9d7dd;
     margin:0px auto;
     padding: 20px 0px 20px 0px;
 }
